Bug 126206 - FILEOPEN DOCX Rejecting change tracked character formatting does not restore original formatting
Summary: FILEOPEN DOCX Rejecting change tracked character formatting does not restore ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2019-07-03 09:35 UTC by NISZ LibreOffice Team
Modified: 2021-08-17 08:01 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (19.49 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-07-03 09:35 UTC, NISZ LibreOffice Team
Details
Screenshot of the document in Word and Writer after rejecting the change (41.31 KB, image/png)
2019-07-03 09:36 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-07-03 09:35:03 UTC
Description:
If a Word document contains direct character formatting and it is removed with change tracking, rejecting the change does not revert the formatting to the original, instead removes it.

Steps to Reproduce:
1.	Format two words as bold in Word
2.	Enable change tracking
3.	Remove the bold formatting from the second word
4.	Save the file and open it in Writer
5.	Reject the tracked change


Actual Results:
The words formatting is not reverted to the original bold, instead it is unformatted.

Expected Results:
The words formatting is reverted to bold upon rejecting the change.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha0+ (x86)
Build ID: 81ab6abe574a75f1ed229a88ceee9eb3b143a18a
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-07-02_02:29:05
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2019-07-03 09:35:38 UTC
Created attachment 152521 [details]
Example file from Word
Comment 2 NISZ LibreOffice Team 2019-07-03 09:36:26 UTC
Created attachment 152522 [details]
Screenshot of the document in Word and Writer after rejecting the change
Comment 3 Commit Notification 2019-07-03 15:33:30 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/5322663f8234836a6a4aaaed025c158fd7e8b67a%5E%21

tdf#126206 DOCX: add rejection of character formatting changes

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.