tdf#126206 DOCX: add rejection of character formatting changes

using imported change tracking data, instead of
clearing only direct formatting in the modified text range.

See commit 9c4eef7d809ad7d283860c7b47b0f561aa240906
"tdf#52391 reject/clear formatting of format-only changes".

Change-Id: Ie27d5c5bca6d9f30681e8f542f95417e9bb4c266
Reviewed-on: https://gerrit.libreoffice.org/75011
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>